--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,39 @@
 <h1>Tracking Disease in Africa</h1>
 
-<ol>
-  <% @conditions.each do |condition| %>
-    <li> <%= condition.name %> <br>
-      Codes: <br>
-      <ul>
-        <li>
-          <% condition.medical_codes.each do |code| %>
-            <%= code.code_system %>: <%= code.code_value %>
-          <% end %>
+<div id="disease-list" class="basic-block">
+  <h2>Medical Conditions</h2>
+  <div class="scrolling-list">
+    <ol>
+      <% @conditions.each do |condition| %>
+        <li> <strong><%= condition.name %></strong> <br>
+          Codes: <br>
+          <ul>
+            <li>
+              <% condition.codes.each do |code| %>
+                <% if code.code_system == "image" %>
+                  <li><img src="<%= code.code_value %>" width="100px" height="100px" alt="" />
+                  </li>
+                <% else %>
+                  <%= code.code_system %>: <%= code.code_value %>
+                <% end %>
+              <% end %>
+            </li>
+          </ul>
         </li>
-      </ul>    
-    </li>
-  <% end %>
-</ol>
+      <% end %>
+    </ol>
+  </div>
+</div>
+
+<div id="drug-list" class="basic-block">
+  <h2>Drug Therapies</h2>
+  <div class="scrolling-list">
+    <ol>
+      <% @therapies.each do |therapy| %>
+      <li>
+        <strong><%= therapy.name %></strong>: <%= therapy.description %>
+      </li>
+      <% end %>
+    </ol>
+  </div>
+</div>
