--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <div id="disease-list" class="basic-block">
   <h2>Medical Conditions</h2>
     <div class="query-form" id="condition-query">
-      <%= form_tag 'medical_conditions', method: :get do %>
+      <%= form_tag '/', method: :get do %>
         <p>
           <%= label_tag :condition_query %>
           <%= text_field_tag :condition_query, params[:condition_query] %>
@@ -37,7 +37,7 @@
 <div id="drug-list" class="basic-block">
   <h2>Drug Therapies</h2>
     <div class="query-form" id="therapy-query">
-      <%= form_tag 'medical_therapies', method: :get do %>
+      <%= form_tag '/', method: :get do %>
         <p>
           <%= label_tag :therapy_query %>
           <%= text_field_tag :therapy_query, params[:therapy_query] %>
