added causes to home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,6 +38,16 @@
           </ul>
         </li>
       <% end %>
+      Medical Causes: <br>
+      <ul>
+          <% condition.causes.each do |cause| %>
+          <li>
+              <em><%= cause.name %></em>: <%= cause.description %>
+            </li>
+          <% end %>
+      </ul>
+    </li>
+  <% end %>
     </ol>
   </div>
 </div>
