have highlighting on search. Search done on alt names. Working on pullin Alt names into file. must include condition name as part of alt names.

--- a/app/views/home/index1.html.erb
+++ b/app/views/home/index1.html.erb
@@ -14,14 +14,10 @@
   <div class="scrolling-list">
     <ol>
       <% @conditions.each do |condition| %>
-
-          <li> <strong><%= condition.try(:highlight).try(:name)? condition.highlight.name[0].html_safe:
-          condition.name%></strong>
-          <br>
-           Codes:
-           <br>
+        <li> <strong><%= condition.name %></strong> <br>
+          Codes: <br>
           <ul>
-              <% MedicalCondition.find(condition.id).codes.each do |code| %>
+              <% condition.codes.each do |code| %>
                 <% if code.code_system == "image" %>
                   <li><img src="<%= code.code_value %>" width="100px" height="100px" alt="" />
                   </li>
@@ -34,16 +30,16 @@
           </ul>
           Alternate Names: <br>
           <ul>
-              <% MedicalCondition.find(condition.id).alternate_names.each do |alt_name| %>
+              <% condition.alternate_names.each do |alt_name| %>
               <li>
-                  <%= HomeController::hilite(alt_name.name, @query) %>
+                  <%= alt_name.name %>
                 </li>
               <% end %>
           </ul>
-
+        </li>
           Medical Causes: <br>
           <ul>
-              <% MedicalCondition.find(condition.id).causes.each do |cause| %>
+              <% condition.causes.each do |cause| %>
               <li>
                   <em><%= cause.name %></em>: <%= cause.description %>
                 </li>
@@ -51,8 +47,6 @@
           </ul>
         </li>
       <% end %>
-
-
     </ol>
   </div>
 </div>
@@ -78,3 +72,5 @@
     </ol>
   </div>
 </div>
+
+<%= @conditions1.inspect %>
