--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Tracking Disease in Africa</h1>
+<h1>Tracking Disease</h1>
 
 <div id="disease-list" class="basic-block">
   <h2>Medical Conditions</h2>
