--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 
 
     <% if session[:user_id] %>
-      <%=link_to "Log Out", "sessions/destroy", method: :delete, class: "btn btn-primary btn-xs" %>
+      <%=link_to "Log Out", "/sessions/1", method: :delete, class: "btn btn-primary btn-xs" %>
     <% else %>
       <!-- Button trigger sign-in modal -->
       <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#mySignInModal">
