--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,50 +12,7 @@
 </head>
 <body>
   <header>
-    <!-- Sign In Modal -->
-    <div class="modal fade" id="mySignInModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="mySignInModalLabel">User Sign in</h4>
-          </div>
-          <div class="modal-body">
-            FORM WILL GO HERE
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Sign In</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="mySignUpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="mySignUpModalLabel">Create Account</h4>
-          </div>
-          <div class="modal-body">
-            <%= form_for User.new do |f| %>
-              <%= f.label "Name" %> <br>
-              <%= f.text_field :name %> <br>
-              <%= f.label "email" %> <br>
-              <%= f.email_field :email %> <br>
-              <%= f.label "Password" %> <br>
-              <%= f.password_field :password%> <br>
-              <%= f.label "Confirm Password"%> <br>
-              <%= f.password_field :password_confirmation%> <br>
-              <br>
-          </div>
-          <div class="modal-footer">
-            <%= f.submit "Sign Up"%>
-          <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render partial: "shared/modals" %>
 
 
     <% if session[:user_id] %>
