created seeds for DailyMed data

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,6 +59,16 @@
       <% @therapies.each do |therapy| %>
       <li>
         <strong><%= HomeController::hilite(therapy.name, @tquery) %></strong>: <%= HomeController::hilite(therapy.description, @tquery) %>
+        <br>
+        <ul>
+
+        <% therapy.codes.each do |code| %>
+          <li>
+            <%= code.code_system %>: <%= code.code_value %>
+          </li>
+        <% end %>
+
+      </ul>
       </li>
       <% end %>
     </ol>
