--- a/app/views/home/index3.html.erb
+++ b/app/views/home/index3.html.erb
@@ -1,4 +1,4 @@
-<h1>Tracking Disease in Africa</h1>
+<h1>Disease Tracks  .....  </h1>
 
 <div id="disease-list" class="basic-block">
   <h2>Medical Conditions</h2>
@@ -9,12 +9,14 @@
           <%= text_field_tag :condition_query, params[:condition_query] %>
           <%= submit_tag :search %>
         </p>
-          <!-- put %end here if wish to break up queries -->
+        <!-- put %end here if wish to break up queries -->
     </div>
   <div class="scrolling-list">
     <ol>
       <% @conditions.each do |condition| %>
-        <li> <strong><%= condition.name %></strong> <br>
+        <li> <strong><%= HomeController::hilite(condition.name, @cquery) %></strong> <br>
+          Description: <br>
+            <%= condition.description[0,250] if condition.description %>
           Codes: <br>
           <ul>
               <% condition.codes.each do |code| %>
@@ -28,23 +30,23 @@
                 <% end %>
               <% end %>
           </ul>
-          Alternate Names: <br>
+          All Known Names: <br>
           <ul>
               <% condition.alternate_names.each do |alt_name| %>
               <li>
-                  <%= alt_name.name %>
+                  <%= HomeController::hilite(alt_name.name, @cquery)%>
                 </li>
               <% end %>
+          </ul>
+          Preventions:<br>
+          <ul>
+            <% condition.preventions.each do |therapy| %>
+            <li>
+              <%= therapy.name %>
+            </li>
+            <% end %>
           </ul>
         </li>
-          Medical Causes: <br>
-          <ul>
-              <% condition.causes.each do |cause| %>
-              <li>
-                  <em><%= cause.name %></em>: <%= cause.description %>
-                </li>
-              <% end %>
-          </ul>
         </li>
       <% end %>
     </ol>
@@ -54,7 +56,7 @@
 <div id="drug-list" class="basic-block">
   <h2>Drug Therapies</h2>
     <div class="query-form" id="therapy-query">
-          <!-- put %= form_tag here if wish to break up queries -->
+ <!-- put %= form_tag here if wish to break up queries -->
         <p>
           <%= label_tag :therapy_query %>
           <%= text_field_tag :therapy_query, params[:therapy_query] %>
@@ -66,11 +68,19 @@
     <ol>
       <% @therapies.each do |therapy| %>
       <li>
-        <strong><%= therapy.name %></strong>: <%= therapy.description %>
+        <strong><%= HomeController::hilite(therapy.name, @tquery) %></strong>: <%= HomeController::hilite(therapy.description, @tquery) %>
+        <br>
+        <ul>
+
+        <% therapy.codes.each do |code| %>
+          <li>
+            <%= code.code_system %>: <%= code.code_value %>
+          </li>
+        <% end %>
+
+      </ul>
       </li>
       <% end %>
     </ol>
   </div>
 </div>
-
-<%= @conditions1.inspect %>
