created comments and queries divs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-<h1> WE MADE A USERRRRRRRR!</h1>
+<div class="queries">
+  <h4>Saved Queries</h4>
+</div>
+
+<div class="comments">
+  <h4>Comments</h4>
+</div>
