working on maps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <script src="javascripts/jquery-min.js"></script>
   <script src="javascripts/bootstrap.min.js"></script>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=" + ENV["GMAPS_KEY"]>
+  </script>
+  
 
 </head>
 <body>
