--- a/app/assets/stylesheets/place.css.scss
+++ b/app/assets/stylesheets/place.css.scss
@@ -1,5 +1,12 @@
-#map-canvas {
-        height: 400px;
-        margin: 0px;
-        padding: 0px
+
+
+#map-canvas { height: 400px; margin: 0; padding: 0}
+
+#location-scroll {
+  display: block;
+  height: 200px;
+  width: 40%;
+  margin: 10%;
+  padding: 0px;
+  overflow: scroll;
 }
