fixed small error in seeds and adjusted data for mumps and west nile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,3 +15,13 @@
 .hi-lite {
   background: yellow;
 }
+
+#query-box {
+  display: block;
+  background-color: navy;
+  color: white;
+  height: 30px;
+  border: solid black;
+  text-align: center
+
+}
