--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,26 @@
  */
 
 
-body {
+.navbar {
+  margin-bottom: 0;
+}
 
-  background-color: orange;
+.logo {
+  display: block;
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+  line-height: 20px;
+  padding-top: 3px;
+  color: #2D3440;
+  background-color: #FFBB34;
+  text-align: center;
+  position: absolute;
+  top: 25px;
+  left: 50px;
+  z-index: 1000
+}
+
+.menu-buttons {
+  float: right;
 }
