--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,10 @@
         </a>
         <a class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-signup">
         <span class="icon-bar">SIGN UPPPP</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
         </a>
 
         <!-- Be sure to leave the brand out there if you want it shown -->
-        <a class="logo" href="/">Disease Tracks</a>
+        <a class="logo" href="/"><span>Disease Tracks</span></a>
 
         <!-- Everything you want hidden at 940px or less, place within here -->
         <div class="nav-collapse collapse" id="nav-collapse-login">
