query-box made. need to put forms in

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -1,7 +1,13 @@
 <div id="query-box">
 
+  <a href="#" class="clear-markers menu-item">Clear Markers</a>
 
-Query Buttons Go Here
+  <a href="#" class="clear-markers menu-item">|</a>
+  <a href="#" class="menu-item" id="select-outbreak">Query Events</a>
 
 
+
+</div>
+<div id="outbreak-query-box" class="query-form" style="display: none" >
+  
 </div>
