--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,13 +49,13 @@
         <span class="nav-form">
           <div class="nav-collapse collapse" id="nav-collapse-signup">
             <%= form_for User.new do |f| %>
-              <%= f.label "Name" %> <br>
-              <%= f.text_field :name %> <br>
-              <%= f.label "email" %> <br>
-              <%= f.email_field :email %> <br>
-              <%= f.label "Password" %> <br>
-              <%= f.password_field :password%> <br>
-              <%= f.label "Confirm Password"%> <br>
+              <%= f.label "Name" %>
+              <%= f.text_field :name %>
+              <%= f.label "email" %>
+              <%= f.email_field :email %>
+              <%= f.label "Password" %>
+              <%= f.password_field :password%>
+              <%= f.label "Confirm Password"%>
               <%= f.password_field :password_confirmation%> <br>
               <%= f.submit "Sign Up"%>
             <% end %>
