--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,9 @@
 
 .navbar {
   margin-bottom: 0;
-  color: ##ffee89;
+  /*padding-bottom: 10px;*/
+  color: #ffee89;
+  /*height: 15px;*/
 }
 
 .navbar a:hover {
@@ -33,12 +35,18 @@
 }
 
 .nav-form {
-  /*padding-left: 300px;*/
-  margin-top: 50px;
+  margin-top: 25px;
   float: right;
   background-color: #222;
   color: #ffc375;
 }
+
+.collapse {
+  margin-top: 30px;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+}
+
 
 .logo {
   display: block;
