--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,12 @@
 
         <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
         <a class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-login">
-        <span class="icon-bar">BUTTONNNN</span>
+        <span class="icon-bar">Log in</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </a>
         <a class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-signup">
-        <span class="icon-bar">SIGN UPPPP</span>
+        <span class="icon-bar">Sign up</span>
         </a>
 
         <!-- Be sure to leave the brand out there if you want it shown -->
@@ -35,13 +35,18 @@
         <!-- Everything you want hidden at 940px or less, place within here -->
         <span class="nav-form">
           <div class="nav-collapse collapse" id="nav-collapse-login">
-            <br>
             <%= form_tag sessions_path, method: :post do %>
-              <%= label_tag :email, "Email: " %>
-              <%= email_field_tag :email %>
-              <%= label_tag :password, "Password: " %>
-              <%= password_field_tag :password %>
-              <%= submit_tag "Sign In" %>
+              <div class="col-xs-12 col-sm-5 col-sm-offset-2">
+                <%= label_tag :email, "Email: " %> <br>
+                <%= email_field_tag :email %>
+              </div>
+              <div class="col-xs-12 col-sm-5">
+                <%= label_tag :password, "Password: " %> <br>
+                <%= password_field_tag :password %>
+                <div class="col-xs-12 col-sm-6 col-sm-offset-4">
+                  <%= submit_tag "Sign In" %>
+                </div>
+              </div>
             <% end %>
           <!-- .nav, .navbar-search, .navbar-form, etc -->
           </div>
@@ -49,15 +54,27 @@
         <span class="nav-form">
           <div class="nav-collapse collapse" id="nav-collapse-signup">
             <%= form_for User.new do |f| %>
-              <%= f.label "Name" %>
-              <%= f.text_field :name %>
-              <%= f.label "email" %>
-              <%= f.email_field :email %>
-              <%= f.label "Password" %>
-              <%= f.password_field :password%>
-              <%= f.label "Confirm Password"%>
-              <%= f.password_field :password_confirmation%> <br>
-              <%= f.submit "Sign Up"%>
+              <div class="col-xs-12 col-sm-3">
+                <%= f.label "Name" %><br>
+                <%= f.text_field :name %>
+              </div>
+              <div class="col-xs-12 col-sm-3">
+                <%= f.label "email" %><br>
+                <%= f.email_field :email %>
+              </div>
+              <div class="col-xs-12 col-sm-3">
+                <%= f.label "Password" %><br>
+                <%= f.password_field :password%>
+              </div>
+              <div class="col-xs-12 col-sm-3">
+                <%= f.label "Confirm Password"%><br>
+                <%= f.password_field :password_confirmation%><br>
+                <div class="col-sm-4 col-sm-offset-5">
+                  <%= f.submit "Sign Up"%>
+                </div>
+              </div>
+              <!-- <div class="col-sm-11"></div>
+              <div class="btn submit-btn col-xs-1 col-sm-1"><%= f.submit "Sign Up"%></div> -->
             <% end %>
           </div>
         </span>
