can auto fill and reset

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -1,11 +1,12 @@
-<%= tag :meta, :name=> 'events', :content=> @events%>
 
 <div id="query-box">
+  <a href="#" class="auto-mark menu-item">Mark All Events</a>
+  <a href="#" class="menu-item">|</a>
   <a href="#" class="clear-markers menu-item">Clear Markers</a>
-  <a href="#" class="clear-markers menu-item">|</a>
+  <a href="#" class="menu-item">|</a>
   <a href="#" class="menu-item" id="select-outbreak">Query Events</a>
-  <a href="#" class="clear-markers menu-item">|</a>
-  <a href="/" class="clear-markers menu-item">Reset Query</a>
+  <a href="#" class="menu-item">|</a>
+  <a href="/" class="menu-item">Reset Query</a>
 
 </div>
 
