--- a/app/assets/stylesheets/place.css.scss
+++ b/app/assets/stylesheets/place.css.scss
@@ -1,1 +1,6 @@
-#map-canvas { height: 400px; margin: 0; padding: 0}
+#map-canvas {
+
+  height: 400px;
+  margin: auto;
+  padding: 0;
+  background-color: black}
