--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,8 +73,8 @@
   margin-bottom: 5px;
 }
 
-.collapse {
-  margin-top: 30px;
+.nav-collapse {
+  margin-top: 50px;
   padding-bottom: 25px;
   margin-bottom: 25px;
 }
