--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -7,7 +7,8 @@
   <a href="#" class="menu-item" id="select-outbreak">Query Events</a>
   <a href="#" class="menu-item">|</a>
   <a href="/" class="menu-item">Reset Query</a>
-
+  <!-- Button trigger modal -->
+  <a class="menu-item" data-toggle="modal" data-target="#myGraphModal">See graph</a>
 </div>
 
 <div id="outbreak-query-box" class="query-form" style="display: none" >
@@ -30,4 +31,22 @@
     <%= submit_tag "Submit Query" %>
 
   <% end %>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myGraphModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        GRAPH GOES HERE.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
