--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     src="https://maps.googleapis.com/maps/api/js?key="+ENV[GMAPS_KEY]>
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
 </head>
 
 <body>
