--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -5,7 +5,9 @@
       <% if @events != nil %>
       <% @events.each do |event| %>
         <li class="place-marker">
-           <a href="#" class="location-marker" data-latitude=<%="#{event.latitude}"%>
+           <a href="#" class="location-marker" data-event-id=<%="#{event.id}"%>
+              data-disease=<%="#{event.disease}"%>
+              data-latitude=<%="#{event.latitude}"%>
               data-longitude=<%= "#{event.longitude}" %>>
             <%="#{event.date.strftime("%m/%d/%Y")}: #{event.disease} infected #{event.number_infected} people in #{event.location}, #{event.state} " %> </a>
         </li>
