moved graph into map partial

--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -1,7 +1,10 @@
 <!-- Center set at Omaha, NE -->
+<div class="secret" id="graph">
+  <div id="linechart_material"></div>
+</div>
 
 <div id="map-canvas" data-center-latitude=<%= "41" %>
                      data-center-longitude=<%= "-96" %> >
 
-                    
+
 </div>
