--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,12 @@
  *= require_self
  */
 
+#graph {
+  position: relative;
+  top: 25px;
+  float: left;
+  height: 0;
+}
 
 .navbar {
   margin-bottom: 0;
