finally got rid of modal, properly styled graph trigger

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -7,7 +7,7 @@
   <a href="#" class="menu-item" id="select-outbreak">Query Events</a>
   <a href="#" class="menu-item">|</a>
   <a href="/" class="menu-item">Reset Query</a>
-  <!-- Button trigger modal -->
+  <a href="#" class="menu-item">|</a>
   <a class="menu-item" id="graph-trigger">See Graph</a>
 </div>
 
@@ -39,24 +39,6 @@
 
   <% end %>
 </div>
-
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="myGraphModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="false"> -->
-  <!-- <div class="modal-dialog"> -->
-    <!-- <div class="modal-content"> -->
-      <!-- <div class="modal-header"> -->
-        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
-        <!-- <h4 class="modal-title" id="myModalLabel">Events over time</h4> -->
-      <!-- </div> -->
-      <!-- <div class="modal-body"> -->
-        <!-- <div id="linechart_material"></div> -->
-      <!-- </div> -->
-      <!-- <div class="modal-footer"> -->
-        <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
-      <!-- </div> -->
-    <!-- </div> -->
-  <!-- </div> -->
 
 <div id="query-choices">
   <ul id="list-of-choices" style="list-style-type:none; float: left">
