changed chart to a scatter plot and started function to pull in events.

--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -1,6 +1,6 @@
 <!-- Center set at Omaha, NE -->
   <div class="secret" id="graph">
-    <div id="linechart_material"></div>
+    <div id="chart_div"></div>
   </div>
 
 <div id="map-canvas" data-center-latitude=<%= "41" %>
