--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,47 +12,44 @@
   <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
-      google.load('visualization', '1.1', {packages: ['line']});
+      google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
 
       function drawChart() {
+        $(".location-marker").each(function(){
 
-        var data = new google.visualization.DataTable();
-        data.addColumn('number', 'Day');
-        data.addColumn('number', 'Ebola');
-        data.addColumn('number', 'West Nile Virus');
-        data.addColumn('number', 'Rubella');
-
-        data.addRows([
-          [1,  37.8, 80.8, 41.8],
-          [2,  30.9, 69.5, 32.4],
-          [3,  25.4,   57, 25.7],
-          [4,  11.7, 18.8, 10.5],
-          [5,  11.9, 17.6, 10.4],
-          [6,   8.8, 13.6,  7.7],
-          [7,   7.6, 12.3,  9.6],
-          [8,  12.3, 29.2, 10.6],
-          [9,  16.9, 42.9, 14.8],
-          [10, 12.8, 30.9, 11.6],
-          [11,  5.3,  7.9,  4.7],
-          [12,  6.6,  8.4,  5.2],
-          [13,  4.8,  6.3,  3.6],
-          [14,  4.2,  6.2,  3.4]
+        });
+        var data = google.visualization.arrayToDataTable([
+          ['Age', 'Weight'],
+          [ 8,      12],
+          [ 4,      5.5],
+          [ 11,     14],
+          [ 4,      5],
+          [ 3,      3.5],
+          [ 6.5,    7]
         ]);
 
         var options = {
-          chart: {
-            title: 'Box Office Earnings in First Two Weeks of Opening',
-            subtitle: 'in millions of dollars (USD)'
-          },
-          width: 500,
-          height: 350
+          title: 'Age vs. Weight comparison',
+          hAxis: {title: 'Age', minValue: 0, maxValue: 15},
+          vAxis: {title: 'Weight', minValue: 0, maxValue: 15},
+          legend: 'none'
         };
 
-        var chart = new google.charts.Line(document.getElementById('linechart_material'));
+        var chart = new google.visualization.ScatterChart(document.getElementById('chart_div'));
 
         chart.draw(data, options);
       }
+
+
+        // var options = {
+        //   chart: {
+        //     title: 'Box Office Earnings in First Two Weeks of Opening',
+        //     subtitle: 'in millions of dollars (USD)'
+        //   },
+        //   width: 500,
+        //   height: 350
+        // };
     </script>
 
   <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
