--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,31 @@
       google.setOnLoadCallback(drawChart);
 
       function drawChart() {
-        $(".location-marker").each(function(){
-
+        var table = [['Time']];
+        $(".location-marker").each(function(index, marker){
+          var point = $(marker);
+          var d = point.attr("data-disease");
+          if ($.inArray(d, table[0]) === -1){
+              table[0].push(point.attr("data-disease"));
+              console.log(table[0]);
+          } else {
+              console.log("repeat disease");
+          }
         });
-        var data = google.visualization.arrayToDataTable([
-          ['Age', 'Weight'],
-          [ 8,      12],
-          [ 4,      5.5],
-          [ 11,     14],
-          [ 4,      5],
-          [ 3,      3.5],
-          [ 6.5,    7]
-        ]);
+        $(".location-marker").each(function(index, marker){
+          var row = new Array(table[0].length);
+          for (var i=1; i<row.length; i++){
+            row[i] = null;
+          }
+          var point = $(marker);
+          // NEEDS TO BE SWITCHED TO DATA-DATE
+          row[0] = point.attr("data-event-id");
+          var disease = point.attr("data-disease");
+          var diseaseIndex = $.inArray(disease, table[0]);
+          row[diseaseIndex] = point.attr("data-number-infected");
+          table.push(row);
+        });
+        var data = google.visualization.arrayToDataTable(table);
 
         var options = {
           title: 'Age vs. Weight comparison',
