--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -12,7 +12,7 @@
                 data-longitude=<%= "#{event.longitude}" %>
                 data-location=<%= "#{event.geo.name}" %>
                 data-date=<%= "#{event.date}" %>
-                data-number-infected=<% "#{event.number_infected}" %>>
+                data-number-infected=<%= "#{event.number_infected}" %>>
               <%="#{event.date.strftime("%m/%d/%Y")}: #{event.disease} infected #{event.number_infected} people in #{event.location}, #{event.state} " %> </a>
           </li>
         <% end %>
